--- a/src/components/Account/Profile.css
+++ b/src/components/Account/Profile.css
@@ -3,7 +3,7 @@
     margin-top: 20px;
     width: fit-content;
     padding: 15px;
-    background-color: var(--dark);
+    background-color: var(--box_bg);
 }
 
 hr {
