--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,3 @@
-:root {
-  --color: #FFFFFF;
-  --bg: #1e1e1e;
-  --dark: #2A2A2B;
-  --medium: #38343c;
-  --light: #48444c;
-  --highlight: #58545c;
-}
-
-/* :root {
-  --color: #000000;
-  --bg: #FFFFFF;
-  --dark: lightgrey;
-  --medium: grey;
-  --light: darkgrey;
-  --highlight: #A0A0A0;
-} */
-
-
 body {
   background-color: var(--bg);
   color: var(--color);
